# dm-Stutter

./: .gitignore  README.md
.cargo/: config.toml
.github/workflows/: build.yml  dm-stutter.mk  readme-Linux.txt  readme-Mod.txt  readme-Windows.txt  readme-macOS.txt
.github/workflows/AUv2/: top_level_default.cmake
lv2/: Cargo.toml
lv2/dm-Reverb.lv2/: dm-Reverb.ttl  manifest.ttl  modgui.ttl
lv2/dm-Reverb.lv2/modgui/: icon-dm-reverb.html  javascript.js  stylesheet-dm-reverb.css
lv2/dm-Stutter.lv2/: dm-Stutter.ttl  manifest.ttl  modgui.ttl
lv2/dm-Stutter.lv2/modgui/: icon-dm-stutter.html  javascript.js  stylesheet-dm-stutter.css
lv2/src/: lib.rs
nih-plug/: Cargo.toml
nih-plug/src/: editor.rs  lib.rs  reverb_parameters.rs  stutter_parameters.rs
nih-plug/src/editor/: style.css  ui_data.rs
nih-plug/src/editor/components/: param_checkbox.rs  param_knob.rs  param_radio_button.rs  param_slider.rs  param_trigger.rs
nih-plug/src/stutter_parameters/: custom_formatters.rs
nih-plug/xtask/src/: main.rs
profiling/: Cargo.toml
profiling/benches/: stutter_bench.rs
profiling/src/: main.rs
reverb/: Cargo.toml  build.rs
reverb/src/: allpass_filter.rs  atan_approximation.rs  average.rs  clip.rs  dc_block.rs  delay_line.rs  diffuser.rs  early_reflections.rs  envelope_follower.rs  float_ext.rs  float_extensions.rs  grains.rs  lfo.rs  lib.rs  mix.rs  one_pole_filter.rs  pan.rs  phasor.rs  reverb.rs  reverse.rs  saturation_activator.rs  shimmer.rs  slide.rs  smooth_parameters.rs  stereo_delay_line.rs  tap.rs  taps.rs  tilt_filter.rs  wave_table.rs
reverb/src/reverb/: shimmer.rs  smooth_parameters.rs  taps.rs  tilt_filter.rs
reverb/src/reverb/taps/: early_reflections.rs  saturation_activator.rs  tap.rs
reverb/src/reverb/taps/saturation_activator/: average.rs
reverb/src/reverb/taps/tap/: grains.rs
reverb/src/reverb/tilt_filter/: biquad_filter.rs
reverb/src/shared/: constants.rs  float_ext.rs
reverb/src/taps/: saturation_activator.rs  shimmer.rs
reverb/src/taps/tap/: allpass_filter.rs
scripts/: build-lv2-for-mod-desktop-mac.sh  build-vst-for-mac-m1.sh  build-vst-for-mac.sh  build-vst3-for-mac.sh
stutter/: Cargo.toml
stutter/src/: activator.rs  crossfade.rs  delay.rs  duration_generator.rs  lib.rs  manual_trigger.rs  phasor.rs  repeat_trigger.rs  stereo_delay_line.rs  time_fraction_generator.rs  toggle_trigger.rs  variable_delay_line.rs
stutter/src/shared/: tuple_ext.rs
vst/: Cargo.toml
vst/scripts/: build-for-mac-m1.sh  build-for-mac.sh  osx_vst_bundler.sh
vst/src/: bin.rs  editor.rs  lib.rs  reverb_parameters.rs  ui.rs
vst/src/editor/: style.css  ui.rs  ui_data.rs
vst/src/editor/components/: param_checkbox.rs  param_knob.rs
vst/src/editor/ui/: param_checkbox.rs  param_knob.rs  ui_data.rs
vst/src/reverb_parameters/: float_param.rs  formatters.rs  param_indexer.rs  params.rs
vst/src/reverb_parameters/float_param/: float_range.rs
vst/src/reverb_parameters/params/: bool_param.rs  float_param.rs  param_indexer.rs
vst/src/reverb_parameters/params/float_param/: float_range.rs
vst/src/ui/: param_knob.rs
vst3/: Cargo.toml
vst3/src/: editor.rs  lib.rs  reverb_parameters.rs  ui.rs
vst3/src/editor/: ui.rs  ui_data.rs  vizia_editor_handle.rs
vst3/src/editor/components/: param_knob.rs
vst3/src/editor/ui/: param_checkbox.rs  param_knob.rs  style.css  ui_data.rs
vst3/src/reverb_parameters/: custom_formatters.rs
vst3/src/ui/: param_knob.rs
