[package]
name = "dm_stutter"
version = "0.1.0"
authors = ["davemollen <davemollen@gmail.com>"]
edition = "2021"

[dependencies]
lv2 = { git = "https://github.com/davemollen/rust-lv2.git", branch = "master", features = [
    "lv2-time",
] }
stutter = { path = "../stutter" }

[lib]
crate-type = ["cdylib"]
