[package]
name = "dm_reverb"
version = "0.1.0"
authors = ["Dave Mollen <davemollen@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vst = "0.3.0"
vizia = {git = "https://github.com/vizia/vizia", branch = "main", features = ["baseview"], default-features = false}
reverb = { path = "../reverb" }

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "dm_reverb_gui"
path = "src/bin.rs"
