[package]
name = "dm_reverb"
version = "0.1.0"
authors = ["Dave Mollen <davemollen@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vst = "0.3.0"
vizia = { git = "https://github.com/robbert-vdh/vizia.git", tag = "patched-2023-12-30", default_features = false, features = ["baseview", "clipboard", "x11"] }
reverb = { path = "../reverb" }

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "dm_reverb_gui"
path = "src/bin.rs"
