[package]
name = "dm_reverb"
version = "0.1.0"
authors = ["Dave Mollen <davemollen@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug", branch = "master", features = ["assert_process_allocs"] }
vizia = {git = "https://github.com/vizia/vizia", branch = "main", features = ["baseview"], default-features = false}
reverb = { path = "../reverb" }
baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "7001c2521fa1a439a01967cb881b411cd75d9ee0", features = ["opengl"] }

[workspace]
members = ["xtask"]